Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(20, 12, 76, .9)'}}\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'lines+marker': {'color': 'rgba(20, 12, 76, .9)'}}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
