--- a/index.ipynb
+++ b/index.ipynb
@@ -675,7 +675,7 @@
     }
    ],
    "source": [
-    "pie_trace = \n",
+    "pie_trace = graph_objs.Pie()\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    pie_trace\n",
