Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -675,8 +675,7 @@
     }
    ],
    "source": [
-    "pie_trace = graph_objs.Pie(\n",
-    "        )\n",
+    "pie_trace = graph_\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    pie_trace\n",
