Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -675,7 +675,9 @@
     }
    ],
    "source": [
-    "pie_trace = graph_\n",
+    "pie_trace = graph_objs.Pie(\n",
+    "        \n",
+    ")\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    pie_trace\n",
