Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -676,7 +676,7 @@
    ],
    "source": [
     "pie_trace = graph_objs.Pie(\n",
-    "        \"\"\n",
+    "        labels = Chocola\n",
     ")\n",
     "\n",
     "plotly.offline.iplot([\n",
