Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -676,7 +676,8 @@
    ],
    "source": [
     "pie_trace = graph_objs.Pie(\n",
-    "        labels = [\"Chocolate\", Vanilla, Strawberry\n",
+    "        labels = [\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
+    "    \n",
     ")\n",
     "\n",
     "plotly.offline.iplot([\n",
