Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,8 +677,8 @@
    "source": [
     "pie_trace = graph_objs.Pie(\n",
     "        labels = [\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
-    "    \n",
-    ")\n",
+    "        values = \n",
+    "    )\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    pie_trace\n",
