Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,7 @@
    "source": [
     "pie_trace = graph_objs.Pie(\n",
     "        labels = [\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
-    "        values = \n",
+    "        values = [50, ]\n",
     "    )\n",
     "\n",
     "plotly.offline.iplot([\n",
