Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,45 +639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "labels": [
-          "chocolate",
-          "vanilla",
-          "strawberry"
-         ],
-         "type": "pie",
-         "uid": "55ccc45a-20e0-11e9-bda4-a5a28189371f",
-         "values": [
-          10,
-          5,
-          15
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"9439008d-8cb4-4483-888e-54a8df70b078\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9439008d-8cb4-4483-888e-54a8df70b078\", [{\"labels\": [\"chocolate\", \"vanilla\", \"strawberry\"], \"values\": [10, 5, 15], \"type\": \"pie\", \"uid\": \"55d0a50c-20e0-11e9-bda4-a5a28189371f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"9439008d-8cb4-4483-888e-54a8df70b078\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9439008d-8cb4-4483-888e-54a8df70b078\", [{\"labels\": [\"chocolate\", \"vanilla\", \"strawberry\"], \"values\": [10, 5, 15], \"type\": \"pie\", \"uid\": \"55d0a50c-20e0-11e9-bda4-a5a28189371f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-f3c07891bee6>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-f3c07891bee6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    values = [50, 40, 10]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "pie_trace = graph_objs.Pie(\n",
     "        labels = [\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
-    "        values = [50, ]\n",
+    "        values = [50, 40, 10]\n",
     "    )\n",
     "\n",
     "plotly.offline.iplot([\n",
