Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -654,7 +654,7 @@
    "source": [
     "pie_trace = graph_objs.Pie(\n",
     "        labels = [\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
-    "        values = [50, 40, 10]\n",
+    "        values = [50, , 10]\n",
     "    )\n",
     "\n",
     "plotly.offline.iplot([\n",
