--- a/index.ipynb
+++ b/index.ipynb
@@ -639,22 +639,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-f3c07891bee6>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-21-4eb7dd4de757>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-f3c07891bee6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    values = [50, 40, 10]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-4eb7dd4de757>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    values=[100,200,300]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "pie_trace = graph_objs.Pie(\n",
     "        labels=[\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
-    "        values = [100,200,300]\n",
+    "        values=[100,200,300]\n",
     "    )\n",
     "\n",
     "plotly.offline.iplot([\n",
