Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,21 +639,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-4eb7dd4de757>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-4eb7dd4de757>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    values=[100,200,300]\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "labels": [
+          "Chocolate",
+          "Vanilla",
+          "Strawberry"
+         ],
+         "type": "pie",
+         "uid": "2992bf92-20e1-11e9-bda4-a5a28189371f",
+         "values": [
+          100,
+          200,
+          300
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"8e044db2-b2b1-41d0-8658-4f6635e77949\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8e044db2-b2b1-41d0-8658-4f6635e77949\", [{\"labels\": [\"Chocolate\", \"Vanilla\", \"Strawberry\"], \"values\": [100, 200, 300], \"type\": \"pie\", \"uid\": \"29974512-20e1-11e9-bda4-a5a28189371f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"8e044db2-b2b1-41d0-8658-4f6635e77949\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"8e044db2-b2b1-41d0-8658-4f6635e77949\", [{\"labels\": [\"Chocolate\", \"Vanilla\", \"Strawberry\"], \"values\": [100, 200, 300], \"type\": \"pie\", \"uid\": \"29974512-20e1-11e9-bda4-a5a28189371f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "pie_trace = graph_objs.Pie(\n",
-    "        labels=[\"Chocolate\", \"Vanilla\", \"Strawberry\"]\n",
+    "        labels=[\"Chocolate\", \"Vanilla\", \"Strawberry\"],\n",
     "        values=[100,200,300]\n",
     "    )\n",
     "\n",
